--- a/bp_posts/templates/posts_single.html
+++ b/bp_posts/templates/posts_single.html
@@ -57,7 +57,7 @@
           <div class="item__comments">
               {% for comment in comments %}
             <p class="item__comment">
-              <b>{{ comment.comment_name }}:</b> {{ comment.comment }}
+              <b>{{ comment.commenter_name }}:</b> {{ comment.comment }}
             </p>
             {% endfor %}
           </div>
